test/fail/macro-ident-outside.rnp
$a
---
 --> fail/macro-ident-outside.rnp:1:1
  |
1 | $a
  | ^^ Unexpected token
  |
